--- a/shared-config/runtimes/test-date/in-cluster.yaml
+++ b/shared-config/runtimes/test-date/in-cluster.yaml
@@ -15,7 +15,7 @@ spec:
   source:
     directory:
       include: >-
-        {all-runtimes-all-clusters/**/*.yaml,all-runtimes-all-clusters/*.yaml,configurations/**/*.yaml,control-planes/**/*.yaml,control-planes/*.yaml,runtimes/test-date/**/*.yaml,runtimes/test-date/*.yaml,test-date/test-date.yaml}
+        {all-runtimes-all-clusters/**/*.yaml,all-runtimes-all-clusters/*.yaml,configurations/**/*.yaml,control-planes/**/*.yaml,control-planes/*.yaml,runtimes/test-date/**/*.yaml,runtimes/test-date/*.yaml,test-date/test-date-default-git-source.yaml,test-date/test-date.yaml}
       recurse: true
     path: shared-config/resources
     repoURL: https://github.com/testcodefresh/shared-config-repo-ingres-less.git
